tools/flowc/tests/errors/error6.flow
DynamicBehaviour(value : ?);

TMouseDown(down : DynamicBehaviour<bool>);
TKey(pressed : DynamicBehaviour<int>);

// a = debugtyping1;

foo() -> void {
	keypress = TKey(DynamicBehaviour(0));

	[
		TMouseDown(DynamicBehaviour(false)),
		keypress
	];

	keypress.pressed;
	{}
}
